--- a/day17.ipynb
+++ b/day17.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 20022  100 20022    0     0  45319      0 --:--:-- --:--:-- --:--:-- 45401\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  8028    0  8028    0     0  23126      0 --:--:-- --:--:-- --:--:-- 23135\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(141, 13)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,56 +25,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "382"
+       "44"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L = data[:20]\n",
+    "N = 16\n",
+    "L = [line[:N] for line in data[:N]]\n",
     "Nrows = len(L)\n",
     "Ncols = len(L[0])\n",
-    "\n",
-    "start = (0, 0)\n",
-    "cost = {(i, j): 99999 for i in range(Nrows) for j in range(Ncols)}\n",
+    "prev_node = {}\n",
+    "start = (0, 0, 4, 0) #row, col, previous direction, nbr of moves since last turn\n",
+    "cost = {(i, j, k, l): 99999 for i in range(Nrows) for j in range(Ncols) for k in range(4) for l in range(4)}\n",
     "#prev_direction = {(i, j): (4,4)  for i in range(Nrows) for j in range(Ncols)}\n",
     "# index of the direction and nbr of moves since last turn\n",
     "def dijkstra(start, cost):\n",
     "    q = []\n",
     "    cost[start] = 0 \n",
-    "    q.append((start, (4, 0), 0))\n",
+    "    q.append((start, 0))\n",
+    "    directions = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
     "    while len(q)>0:\n",
-    "        pos, p_dir, c = q.pop() #node, prev_dir, cost\n",
-    "        if cost[pos] != c:\n",
+    "        node, c = q.pop()\n",
+    "        i, j, prevdir, n = node\n",
+    "        if cost[node] < c:\n",
     "            continue #already found a better path for n\n",
-    "        directions = [(1, 0), (-1, 0), (0, 1), (0, -1)]\n",
-    "        for kdir, dir in enumerate(directions):\n",
-    "            next_pos = (pos[0]+dir[0], pos[1]+dir[1])\n",
-    "            if next_pos[0] < 0 or next_pos[0] >= Nrows:\n",
+    "        for newdir, move in enumerate(directions):\n",
+    "            # compute new node\n",
+    "            ii, jj = (i+move[0], j+move[1])\n",
+    "            if newdir == prevdir:\n",
+    "                newn = n + 1\n",
+    "            else:\n",
+    "                newn = 1\n",
+    "            newnode = (ii, jj, newdir, newn)\n",
+    "\n",
+    "            # check if new node is valid\n",
+    "            if ii < 0 or ii >= Nrows:\n",
     "                continue\n",
-    "            if next_pos[1] < 0 or next_pos[1] >= Ncols:\n",
+    "            if jj < 0 or jj >= Ncols:\n",
+    "                continue \n",
+    "            if newn==4:\n",
     "                continue\n",
-    "            if kdir == p_dir[0] and p_dir[1]==3:\n",
+    "            if (newdir-prevdir)%4==2:\n",
     "                continue\n",
-    "            val = int(L[next_pos[0]][next_pos[1]])\n",
-    "            if(cost[next_pos] > (c+val)):\n",
-    "                cost[next_pos] = c+val\n",
-    "                if kdir == p_dir[0]:\n",
-    "                    newp_dir = kdir, p_dir[1]+1\n",
-    "                else:\n",
-    "                    newp_dir = kdir, 1\n",
-    "                q.append((next_pos, newp_dir, c+val))\n",
-    "dijkstra(start, cost)\n",
-    "cost[(Nrows-1, Ncols-1)] - int(L[Nrows-1][Ncols-1])"
+    "            \n",
+    "            # check if new node is better\n",
+    "            val = int(L[ii][jj])\n",
+    "            if(cost[newnode] > (c+val)):\n",
+    "                cost[newnode] = c+val\n",
+    "                q.append((newnode, c+val))\n",
+    "                prev_node[newnode] = node\n",
+    "    return cost, prev_node\n",
+    "cost, prev_node = dijkstra(start, cost)\n",
+    "res = [(k, c) for k, c in cost.items() if k[0]==Nrows-1 and k[1]==Ncols-1 and c<99999]\n",
+    "min([c for (_, c) in res])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 12, 1, 1) 102\n",
+      "(12, 11, 2, 2) 99\n",
+      "(11, 11, 2, 1) 96\n",
+      "(10, 11, 3, 1) 93\n",
+      "(10, 12, 2, 3) 87\n",
+      "(9, 12, 2, 2) 84\n",
+      "(8, 12, 2, 1) 81\n",
+      "(7, 12, 1, 1) 74\n",
+      "(7, 11, 2, 3) 71\n",
+      "(6, 11, 2, 2) 66\n",
+      "(5, 11, 2, 1) 60\n",
+      "(4, 11, 1, 1) 55\n",
+      "(4, 10, 2, 2) 52\n",
+      "(3, 10, 2, 1) 47\n",
+      "(2, 10, 1, 2) 43\n",
+      "(2, 9, 1, 1) 41\n",
+      "(2, 8, 2, 2) 37\n",
+      "(1, 8, 2, 1) 32\n",
+      "(0, 8, 1, 3) 29\n",
+      "(0, 7, 1, 2) 28\n",
+      "(0, 6, 1, 1) 25\n",
+      "(0, 5, 0, 1) 23\n",
+      "(1, 5, 1, 3) 20\n",
+      "(1, 4, 1, 2) 15\n",
+      "(1, 3, 1, 1) 11\n",
+      "(1, 2, 2, 1) 6\n",
+      "(0, 2, 1, 2) 5\n",
+      "(0, 1, 1, 1) 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "node = (12, 12, 1, 1)\n",
+    "while node[0]+node[1]>0:\n",
+    "    print(node, cost[node])\n",
+    "    node = prev_node[node]"
    ]
   },
   {
@@ -113,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
