--- a/day17.ipynb
+++ b/day17.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "(141, 13)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,23 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "665\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "44"
+       "665"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "N = 16\n",
-    "L = [line[:N] for line in data[:N]]\n",
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "L = [list(map(int, line)) for line in data]\n",
     "Nrows = len(L)\n",
     "Ncols = len(L[0])\n",
     "prev_node = {}\n",
@@ -50,13 +58,20 @@
     "#prev_direction = {(i, j): (4,4)  for i in range(Nrows) for j in range(Ncols)}\n",
     "# index of the direction and nbr of moves since last turn\n",
     "def dijkstra(start, cost):\n",
-    "    q = []\n",
     "    cost[start] = 0 \n",
-    "    q.append((start, 0))\n",
+    "    q = [(0, start)]\n",
     "    directions = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
-    "    while len(q)>0:\n",
-    "        node, c = q.pop()\n",
+    "    seen = set()\n",
+    "\n",
+    "    while q:\n",
+    "        c, node = heappop(q)\n",
     "        i, j, prevdir, n = node\n",
+    "        if i==Nrows-1 and j==Ncols-1:\n",
+    "           print(c)\n",
+    "           break\n",
+    "        if node in seen:\n",
+    "               continue\n",
+    "        seen.add(node)\n",
     "        if cost[node] < c:\n",
     "            continue #already found a better path for n\n",
     "        for newdir, move in enumerate(directions):\n",
@@ -69,20 +84,14 @@
     "            newnode = (ii, jj, newdir, newn)\n",
     "\n",
     "            # check if new node is valid\n",
-    "            if ii < 0 or ii >= Nrows:\n",
-    "                continue\n",
-    "            if jj < 0 or jj >= Ncols:\n",
-    "                continue \n",
-    "            if newn==4:\n",
-    "                continue\n",
-    "            if (newdir-prevdir)%4==2:\n",
+    "            if ii < 0 or ii >= Nrows or jj < 0 or jj >= Ncols or newn==4 or (newdir-prevdir)%4==2:\n",
     "                continue\n",
     "            \n",
     "            # check if new node is better\n",
-    "            val = int(L[ii][jj])\n",
+    "            val = L[ii][jj]\n",
     "            if(cost[newnode] > (c+val)):\n",
     "                cost[newnode] = c+val\n",
-    "                q.append((newnode, c+val))\n",
+    "                heappush(q, (c+val, newnode))\n",
     "                prev_node[newnode] = node\n",
     "    return cost, prev_node\n",
     "cost, prev_node = dijkstra(start, cost)\n",
@@ -92,49 +101,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12, 12, 1, 1) 102\n",
-      "(12, 11, 2, 2) 99\n",
-      "(11, 11, 2, 1) 96\n",
-      "(10, 11, 3, 1) 93\n",
-      "(10, 12, 2, 3) 87\n",
-      "(9, 12, 2, 2) 84\n",
-      "(8, 12, 2, 1) 81\n",
-      "(7, 12, 1, 1) 74\n",
-      "(7, 11, 2, 3) 71\n",
-      "(6, 11, 2, 2) 66\n",
-      "(5, 11, 2, 1) 60\n",
-      "(4, 11, 1, 1) 55\n",
-      "(4, 10, 2, 2) 52\n",
-      "(3, 10, 2, 1) 47\n",
-      "(2, 10, 1, 2) 43\n",
-      "(2, 9, 1, 1) 41\n",
-      "(2, 8, 2, 2) 37\n",
-      "(1, 8, 2, 1) 32\n",
-      "(0, 8, 1, 3) 29\n",
-      "(0, 7, 1, 2) 28\n",
-      "(0, 6, 1, 1) 25\n",
-      "(0, 5, 0, 1) 23\n",
-      "(1, 5, 1, 3) 20\n",
-      "(1, 4, 1, 2) 15\n",
-      "(1, 3, 1, 1) 11\n",
-      "(1, 2, 2, 1) 6\n",
-      "(0, 2, 1, 2) 5\n",
-      "(0, 1, 1, 1) 4\n"
+      "809\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "809"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = [list(map(int, line)) for line in data]\n",
+    "#L = [[1, 9, 9, 9, 9], [1, 9, 9, 9, 9], [1, 9, 9, 9, 9], [1, 9, 9, 9, 9], [1, 1, 1, 1, 1]]\n",
+    "Nrows = len(L)\n",
+    "Ncols = len(L[0])\n",
+    "prev_node = {}\n",
+    "start = (0, 0, 4, 5) #row, col, previous direction, nbr of moves since last turn\n",
+    "cost = {(i, j, k, l): 99999 for i in range(Nrows) for j in range(Ncols) for k in range(4) for l in range(11)}\n",
+    "#prev_direction = {(i, j): (4,4)  for i in range(Nrows) for j in range(Ncols)}\n",
+    "# index of the direction and nbr of moves since last turn\n",
+    "def dijkstra(start, cost):\n",
+    "    cost[start] = 0 \n",
+    "    q = [(0, start)]\n",
+    "    directions = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
+    "    seen = set()\n",
+    "\n",
+    "    while q:\n",
+    "        c, node = heappop(q)\n",
+    "        i, j, prevdir, n = node\n",
+    "        if i==Nrows-1 and j==Ncols-1 and n>=4:\n",
+    "           print(c)\n",
+    "           break\n",
+    "        if node in seen:\n",
+    "               continue\n",
+    "        seen.add(node)\n",
+    "        if cost[node] < c:\n",
+    "            continue #already found a better path for n\n",
+    "        for newdir, move in enumerate(directions):\n",
+    "            # compute new node\n",
+    "            ii, jj = (i+move[0], j+move[1])\n",
+    "            if newdir == prevdir:\n",
+    "                newn = n + 1\n",
+    "            else:\n",
+    "                newn = 1\n",
+    "            newnode = (ii, jj, newdir, newn)\n",
+    "\n",
+    "            # check if new node is valid\n",
+    "            if ii < 0 or ii >= Nrows or jj < 0 or jj >= Ncols:\n",
+    "                continue\n",
+    "            if newn==11 or ((newdir-prevdir)%4==2 and prevdir!=4):\n",
+    "                continue\n",
+    "            if newdir != prevdir and n<4:\n",
+    "                continue\n",
+    "            \n",
+    "            # check if new node is better\n",
+    "            val = L[ii][jj]\n",
+    "            if(cost[newnode] > (c+val)):\n",
+    "                cost[newnode] = c+val\n",
+    "                heappush(q, (c+val, newnode))\n",
+    "                prev_node[newnode] = node\n",
+    "    return cost, prev_node\n",
+    "cost, prev_node = dijkstra(start, cost)\n",
+    "res = [(k, c) for k, c in cost.items() if k[0]==Nrows-1 and k[1]==Ncols-1 and k[3]>=4 and c<99999]\n",
+    "min([c for (_, c) in res])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[((4, 4, 2, 4), 64)]\n",
+      "(4, 4, 2, 4) 64\n",
+      "(3, 4, 2, 3) 63\n",
+      "(2, 4, 2, 2) 54\n",
+      "(1, 4, 2, 1) 45\n",
+      "(0, 4, 1, 4) 36\n",
+      "(0, 3, 1, 3) 27\n",
+      "(0, 2, 1, 2) 18\n",
+      "(0, 1, 1, 1) 9\n"
      ]
     }
    ],
    "source": [
-    "node = (12, 12, 1, 1)\n",
-    "while node[0]+node[1]>0:\n",
+    "print(res)\n",
+    "node = res[0][0]\n",
+    "while node != start:\n",
     "    print(node, cost[node])\n",
-    "    node = prev_node[node]"
+    "    node = prev_node[node]\n"
    ]
   },
   {
